@@ -2,6 +2,7 @@ package org.keiosu.visuturing;
 
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
+import java.net.URL;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -23,30 +24,31 @@ public class BrowserControl {
             } else {
                 openUrlFirefox(url);
             }
-        } catch (IOException e) {
+        } catch (Exception e) {
             LOGGER.atError()
-                    .addArgument(e.getMessage())
-                    .addArgument(e)
-                    .log("Could not invoke browser, error={}");
+                    .setCause(e)
+                    .log("Could not invoke configured browser, error={}", e.getMessage());
         }
     }
 
     private static void openUrlFirefox(String url) throws IOException {
-        String cmd = "firefox -new-tab \"" + url + "\"";
-        Process cmdProcess = Runtime.getRuntime().exec(cmd);
+        URL fullUrl = new URL(url);
+        Process cmdProcess =
+                Runtime.getRuntime().exec(new String[] {"firefox", "-new-tab", fullUrl.toString()});
         try {
             cmdProcess.waitFor();
         } catch (InterruptedException e) {
-            LOGGER.atError()
-                    .addArgument(e.getMessage())
-                    .addArgument(e)
-                    .log("Could not invoke browser, error={}");
             Thread.currentThread().interrupt();
+            LOGGER.atError()
+                    .setCause(e)
+                    .log("Could not invoke firefox browser, error={}", e.getMessage());
         }
     }
 
     private static void openUrlWindows(String url) throws IOException {
-        Runtime.getRuntime().exec("rundll32 url.dll,FileProtocolHandler " + url);
+        URL fullUrl = new URL(url);
+        Runtime.getRuntime()
+                .exec(new String[] {"rundll32", "url.dll,FileProtocolHandler", fullUrl.toString()});
     }
 
     private static boolean isWindowsPlatform() {
